# ClutchGod-Jarvis

./: .env  pyproject.toml
data/: test_data.txt
outputs/: transcript_upload_Learn HTML in 10 Minutes  Build Your First Webpage Beginner Tutorial_20251110_015258_20251110_015313.json  transcript_upload_Learn HTML in 10 Minutes  Build Your First Webpage Beginner Tutorial_20251114_184134_20251114_184236.json  transcript_upload_Learn HTML in 10 Minutes  Build Your First Webpage Beginner Tutorial_20251117_192757_20251117_192838.json  transcript_upload_WhatsApp Video 2025-11-14 at 6.46.56 PM_20251114_185350_20251114_185537.json  transcript_upload_WhatsApp Video 2025-11-14 at 6.46.56 PM_20251117_192855_20251117_193101.json
src/: app.py  config.py  google_processor.py  utils.py
