[project]
name = "video-summariser"
version = "0.1.0"
description = "AI powered student assisstant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web Framework
    "streamlit>=1.51.0",

    # AI/ML Libraries
    "openai>=1.12.0",
    "langchain>=0.1.9",
    "langchain-openai>=0.0.5",
    
    # Document Processing
    "pypdf2>=3.0.1",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.2",
    
    # Audio/Video Processing
    "pydub>=0.25.1",
    
    # Vector Database
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.22",
    
    # Utilities
    "python-dotenv>=1.0.1",
    "tiktoken>=0.6.0",
]


